Add link to Simple 3D Watch in index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       <a href="3d.html">
         <button class="btn">3D Mode</button>
       </a>
+
+      <a href="simple3d.html">
+        <button class="btn">Simple 3D Watch</button>
+      </a>
     </div>
 
     <footer>
